# stock-algo

./: .dockerignore  .gitignore  DEPLOY.md  GUIDE_OPTIONS_TRADING_SYSTEM.md  README.md  dashboard.py  pyproject.toml  requirements.txt  run-prod.sh  run.sh  scanner.py
.streamlit/: config.toml
backend/: app.py
backend/routes/: alerts.py  backtest.py  journal.py  market.py  options.py  paper.py  screener.py  signals.py  system.py  trades.py
config/: settings.py
deployment/: .env.example  Dockerfile.backend  Dockerfile.frontend  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  nginx.conf
docs/: ARCHITECTURE.md  CHANGELOG.md  RESEARCH.md  STRATEGY.md  TRADING_GUIDE.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/backtest/: page.tsx
frontend/src/app/options/: page.tsx
frontend/src/app/paper/: page.tsx
frontend/src/app/scanner/: page.tsx
frontend/src/app/screener2/: page.tsx
frontend/src/app/signals/: page.tsx
frontend/src/app/trades/: page.tsx
frontend/src/components/: Sidebar.tsx
frontend/src/lib/: api.ts
src/alerts/: notifier.py
src/backtest/: engine.py  improvement_tester.py  optimizer.py
src/broker/: angelone.py  paper_trader.py
src/data/: fetcher.py  fno_stocks.py  live_feed.py  market_context.py
src/db/: database.py
src/indicators/: technical.py
src/journal/: tracker.py
src/options/: chain.py  greeks.py  strike_selector.py
src/risk/: manager.py
src/signals/: generator.py  trade_plan.py
