[project]
name = "stock-algo"
version = "0.1.0"
description = "A data-driven options trading decision platform"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "yfinance>=0.2.31",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "ta>=0.11.0",
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "apscheduler>=3.10.4",
]

[project.optional-dependencies]
alerts = [
    "python-telegram-bot>=20.6",
]
sentiment = [
    "newspaper3k>=0.2.8",
    "textblob>=0.17.1",
]

[project.scripts]
scan = "scanner:main"
